added databasec onnection and context

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DefaultConnection": "Data Source=dreammaker-it.se;Initial Catalog=vanilladb;User ID=movieadmin;Password=Pa$$word;Encrypt=False;Trust Server Certificate=True"
 }
