--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "DefaultConnection": "Data Source=dreammaker-it.se;Initial Catalog=vanilladb;User ID=movieadmin;Password=Pa$$word;Encrypt=False;Trust Server Certificate=True"
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=dreammaker-it.se;Initial Catalog=vanilladb;User ID=movieadmin;Password=Pa$$word;Encrypt=False;Trust Server Certificate=True"
+  },
+  "AllowedHosts": "*"
 }
