--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,8 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=dreammaker-it.se;Initial Catalog=vanilladb;User ID=movieadmin;Password=Pa$$word;Encrypt=False;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=dreammaker-it.se;Initial Catalog=vanilladb;User ID=movieadmin;Password=Pa$$word;Encrypt=False;Trust Server Certificate=True",
+    "LocalConnection": "server=(localdb)\\MSSQLLocalDB;database=VanillaMovieShop;trusted_connection=true;"
   },
   "AllowedHosts": "*"
 }
